# jorts

./: .gitignore  AUTHORS  JortsInstaller.nsi  README.md  io.github.ellie_commons.jort.yaml  io.github.ellie_commons.jorts-flathub copy.yml  io.github.ellie_commons.jorts-flathub.yml  io.github.ellie_commons.jorts-unstable.yaml  io.github.ellie_commons.jorts.appimage.yml  io.github.ellie_commons.jorts.flathub.yml  io.github.ellie_commons.jorts.legacy.yml  io.github.ellie_commons.jorts.yaml  io.github.ellie_commons.jorts.yml  io.github.teamcons.jort.yaml  make-appimage.sh  meson-gtk4.build  meson.build  meson_options.txt  windows-deploy.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  ci.yml  merge.yml
data/: Application.css  Themes.css  generate_stylesheets  generate_stylesheets.sh  io.github.ellie_commons.jort.appdata.xml.in  io.github.ellie_commons.jort.desktop.in  io.github.ellie_commons.jort.gschema.xml  io.github.ellie_commons.jorts.appdata.xml.in  io.github.ellie_commons.jorts.desktop.in  io.github.ellie_commons.jorts.gresource.xml  io.github.ellie_commons.jorts.gschema.xml  io.github.ellie_commons.jorts.metainfo.xml.in  io.github.teamcons.jort.appdata.xml.in  io.github.teamcons.jort.desktop.in  io.github.teamcons.jort.gresource.xml  io.github.teamcons.jort.gschema.xml  jorts.desktop.in  jorts.gschema.xml  jorts.metainfo.xml.in  meson.build  stylesheets.sh
data/themes/: banana.css  blueberry.css  bubblegum.css  cocoa.css  generate_stylesheets.sh  grape.css  lime.css  mint.css  orange.css  slate.css  strawberry.css
debian/: changelog  control  copyright  rules
flatpak/: io.github.ellie_commons.jorts-2.0.0.yaml  io.github.ellie_commons.jorts-2.0.1.yaml  io.github.ellie_commons.jorts-2.1.1.yaml  io.github.ellie_commons.jorts-2.1.2.yaml  io.github.ellie_commons.jorts-2.2.0.yaml
po/: Jorts translation sheet.xlsx  LINGUAS  LINGUAS-no  POTFILES  README.md  bn.po  ca.po  com.github.teamcons.jort.pot  cs.po  da.po  de  de.po  de_DE.po  el.po  en_US.pot  en_us.po  es  es.po  fi.po  fil.po  fr  fr.po  gl.po  hi.po  io.github.ellie_commons.jort.pot  io.github.ellie_commons.jorts.pot  it  it.po  ja.po  lt.po  nb.po  nl.po  nl_NL.po  no.po  pl.po  pt  pt.po  pt_BR.po  pt_br.po  pt_pt.po  (+8 more)
po/extra/: LINGUAS  POTFILES  bn.po  ca.po  cs.po  da.po  de.po  de_DE.po  el.po  en_us.pot  es.po  extra.pot  fi.po  fil.po  fr.po  gl.po  hi.po  io.github.ellie_commons.jorts.pot  it.po  ja.po  lt.po  meson.build  nb.po  nl.po  nl_NL.po  no.po  pl.po  pt.po  pt_BR.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  tr_TR.po  uk.po  zh.po  zh_cn.po
releases/: io.github.ellie_commons.jorts-2.1.0.yml  io.github.ellie_commons.jorts-2.3.0.yml  io.github.ellie_commons.jorts-git.yml
repo/: summary  summary.idx
repo/refs/heads/app/io.github.teamcons.jort/x86_64/: master
repo/refs/heads/runtime/io.github.teamcons.jort.Debug/x86_64/: master
repo/refs/heads/runtime/io.github.teamcons.jort.Locale/x86_64/: master
repo/summaries/: 123b551d7e2224d9878f7ea66955cf80b6fa5d3c7f00f5509979c64609c908cc-5f4b8423ca6f10be994ebb3dc7584f731842091974962dcf4f6a098da8dd1147.delta  155c848033ce2e9e76bd6a3897c995c91071c420672e5e6e49b7291ffb2aac86-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta  2a7a08d6aa0da5a1d4bb09dd8a3c084f0c595d73005b4506874168d2b00be050-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta  4a76bbf5e63b244148562d30f6e6f59fcb911b4c7e33cf869609bab1f7665872-5f4b8423ca6f10be994ebb3dc7584f731842091974962dcf4f6a098da8dd1147.delta  957037fc0cc831c1031bc1b4f7be56fa85ec6ceeed4f6b2b36f8c0b0f8a6e7a8-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta  9f77c702d5a4d936d86dd54d866ce53d036875111da94f1c791f7e803831605a-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta  c9e60460acbd60c6e2f315d1d9bd43195d45650b845caa75d846f1a3b8a9bfc2-5f4b8423ca6f10be994ebb3dc7584f731842091974962dcf4f6a098da8dd1147.delta  de61c2953c37a7b83e0810b3877c7faf36e464866811e8169ab90ebc0003e972-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta  de62726b8d2892c164592c0c92f030df0a4c3b037ea0e4241711637f80a49985-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta  f277bf26bc2c4f8c7d246f4e68960832ebd42fdfe22f3874564710dc7ace51f9-f9a4f4a8df064d00991ed0a196384618e179125185938fa00f5917668aa8bc5c.delta
src/: Application.vala  Config.vala.in  Constants.vala  EditableLabel.vala  MainWindow.vala  Preferences.vala  README.md  StickyNoteWindow.vala  Themer.vala  meson.build  noteData.vala
src/Objects/: Enum.vala  NoteData.vala  NoteManager.vala  Themes.vala  Zoom.vala  Zoomkind.vala  noteData.vala
src/Services/: ColorController.vala  Constants.vala  FormatRequest.vala  Jason.vala  NoteManager.vala  ScribblyController.vala  Stash.vala  Storage.vala  Themer.vala  Utils.vala  Zoom.vala  ZoomController.vala
src/Utils/: Libportal.vala  Random.vala  ZoomConvert.vala
src/Views/: NoteView.vala  PopoverView.vala  PreferencesView.vala
src/Widgets/: ActionBar.vala  ColorBox.vala  ColorButton.vala  ColorPill.vala  ColorPillButton.vala  EditableLabel.vala  MonospaceBox.vala  Popover.vala  SettingsPopover.vala  StickyView.vala  TextView.vala  ZoomBox.vala
src/Widgets/PopoverWidgets/: ColorBox.vala  ColorPill.vala  MonospaceBox.vala  ZoomBox.vala
src/Widgets/PreferencesWidgets/: SettingsSwitch.vala
src/Windows/: PreferenceWindow.vala  StickyNoteWindow.vala
windows/: Jorts-Installer.nsi  beware.txt  deploy.sh  deps-windows.sh  loaders.cache  prep.sh
windows/icons/: ico.rc
windows/icons/elementary/: icon-theme.cache
